--- a/BookOrganizer/Views/MainView.xaml
+++ b/BookOrganizer/Views/MainView.xaml
@@ -3,9 +3,9 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:c="clr-namespace:BookOrganizer.Commands" 
     xmlns:s ="clr-namespace:BookOrganizer.ViewModels"
-        Title="Book Organizer" Icon ="C:\Users\Kamila\Desktop\logo_book_org_transparent.png" 
+        Title="Book Organizer" 
         Background="#FFEBEBEB" BorderBrush="#FF0796A2"
-        Height="470.5" Width="787" WindowStartupLocation="CenterScreen" ResizeMode="NoResize">
+        Height="470.5" Width="787" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
 
     <Window.Resources>
         <!-- Allows a KeyBinding to be associated with a command defined in the View Model  -->
@@ -14,20 +14,23 @@
 
     <Window.InputBindings>
         <KeyBinding Key="Q" Modifiers="Control" Command="{StaticResource ExitCommandReference}" />
+        <KeyBinding Key="Z" Modifiers="Control" Command="{Binding UndoCommand}" />
+        <KeyBinding Key="Y" Modifiers="Control" Command="{Binding RedoCommand}" />
     </Window.InputBindings>
 
     <DockPanel>
         <Menu DockPanel.Dock="Top">
-            <MenuItem IsEnabled="False" Header="Файл">
+            <MenuItem Header="Файл">
                 <MenuItem Header="Сохранить..." InputGestureText="Ctrl-S"/>
                 <Separator/>
                 <MenuItem Header="Библиотека"/>
                 <!--Все списки в одном-->
             </MenuItem>
-            <MenuItem IsEnabled="False" Header="Править">
-                <MenuItem Header="Отменить" InputGestureText="Ctrl-Z"/>
-                <MenuItem Header="Повторить" InputGestureText="Ctrl-Y"/>
+            <MenuItem Header="Править">
+                <MenuItem Header="Отменить" InputGestureText="Ctrl-Z" Command="{Binding UndoCommand}"/>
+                <MenuItem Header="Повторить" InputGestureText="Ctrl-Y" Command="{Binding RedoCommand}"/>
             </MenuItem>
+            <MenuItem Header="Что бы почитать?" Click="MenuItem_Click"/>
             <MenuItem Header="BookOrganizer" >
                 <MenuItem IsEnabled="False" Header="О программе..." InputGestureText="Ctrl-O"/>
                 <MenuItem IsEnabled="False" Header="Настройки..." InputGestureText="Ctrl-N"/>
@@ -44,22 +47,22 @@
                 <TextBlock Text="Вишлист" FontSize="14" Foreground="#FF3E3E42" FontFamily="Century Gothic" FontWeight="Bold"  Margin="367,3,177,26" Height="35" RenderTransformOrigin="0.511,0.5"/>
 
 
-                <Button Name="ReadBooks" Click="Button_Switch_Mode" HorizontalAlignment="Left" VerticalAlignment="Top" Height="13" Width="13" Margin="112,25,0,0" BorderBrush="#FF139EE0" Foreground="#FF139EE0" Cursor="Hand">
+                <Button Command="{Binding OpenListCommand}" CommandParameter="0" Name="ReadBooks" HorizontalAlignment="Left" VerticalAlignment="Top" Height="13" Width="13" Margin="112,25,0,0" BorderBrush="#FF139EE0" Foreground="#FF139EE0" Cursor="Hand">
                     <Button.Template>
                         <ControlTemplate TargetType="{x:Type Button}">
                             <Grid>
-                                <Ellipse Name="readBooks" Stroke="#FFBFBFBF" StrokeThickness="1" Fill="#FFBFBFBF"/>
+                                <Ellipse Name="readBooks" Stroke="#FFBFBFBF" StrokeThickness="1" Fill="{Binding Mod[0]}"/>
                                 <ContentPresenter HorizontalAlignment="Center"
                 					VerticalAlignment="Center"/>
                             </Grid>
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
-                <Button Name="ReadingNow" Click="Button_Switch_Mode" HorizontalAlignment="Left" VerticalAlignment="Top" Height="13" Width="13" Margin="252,25,0,0" BorderBrush="#FF139EE0" Foreground="#FF139EE0" Cursor="Hand">
+                <Button Command="{Binding OpenListCommand}" CommandParameter="1" Name="ReadingNow" HorizontalAlignment="Left" VerticalAlignment="Top" Height="13" Width="13" Margin="252,25,0,0" BorderBrush="#FF139EE0" Foreground="#FF139EE0" Cursor="Hand">
                     <Button.Template>
                         <ControlTemplate TargetType="{x:Type Button}">
                             <Grid>
-                                <Ellipse Name="readingNow" Stroke="#FFBFBFBF" StrokeThickness="1" Fill="Transparent"/>
+                                <Ellipse Name="readingNow" Stroke="#FFBFBFBF" StrokeThickness="1" Fill="{Binding Mod[1]}"/>
                                 <ContentPresenter HorizontalAlignment="Center"
                 					VerticalAlignment="Center"/>
                             </Grid>
@@ -67,11 +70,11 @@
                     </Button.Template>
                 </Button>
 
-                <Button x:Name="WishList" Click="Button_Switch_Mode" HorizontalAlignment="Left" VerticalAlignment="Top" Height="13" Width="13" Margin="388,25,0,0" BorderBrush="#FF139EE0" Foreground="#FF139EE0" Cursor="Hand">
+                <Button Command="{Binding OpenListCommand}" CommandParameter="2" x:Name="WishList" HorizontalAlignment="Left" VerticalAlignment="Top" Height="13" Width="13" Margin="388,25,0,0" BorderBrush="#FF139EE0" Foreground="#FF139EE0" Cursor="Hand">
                     <Button.Template>
                         <ControlTemplate TargetType="{x:Type Button}">
                             <Grid x:Name="WishListGrid">
-                                <Ellipse x:Name="wishList" Stroke="#FFBFBFBF" StrokeThickness="0.8" Fill="Transparent"/>
+                                <Ellipse x:Name="wishList" Stroke="#FFBFBFBF" StrokeThickness="0.8" Fill="{Binding Mod[2]}"/>
                                 <ContentPresenter HorizontalAlignment="Center"
                 					VerticalAlignment="Center"/>
                             </Grid>
@@ -82,18 +85,19 @@
                 <Button Content="Добавить книгу" Height="35" Width="150" VerticalAlignment="Top" HorizontalAlignment="Left" Command="{Binding AddBookCommand}" FontFamily="Century Gothic" FontWeight="Bold" Background="#FF139EE0" Foreground="#FFEBEBEB" Margin="571,10,0,0" BorderBrush="{x:Null}" Cursor="Hand" FontSize="14"/>
 
             </Grid>
-            
+
             <DataGrid x:Name="BookListGrid"
                       Height="360" Width="513" Margin="-9,64,129,0" 
                       Background="#FF3E3E42"  Foreground="White" 
                       BorderThickness="0" BorderBrush="{x:Null}"
-                      GridLinesVisibility="None" SelectionMode="Single"
+                      GridLinesVisibility="Horizontal" SelectionMode="Single"
                       AutoGenerateColumns="False"
                       ItemsSource="{Binding CurrentList}"
                       VerticalAlignment="Top" HorizontalAlignment="Left"
                       IsReadOnly="True"
                       CanUserDeleteRows="False" CanUserAddRows="False" CanUserResizeRows="False"
                       CanUserReorderColumns="True" CanUserResizeColumns="False" RowBackground="#FF3E3E42" FontFamily="Century Gothic" FontSize="14"
+                      SelectedItem="{Binding SelectedBook, UpdateSourceTrigger=PropertyChanged}"
                       >
 
                 <DataGrid.Resources>
@@ -104,7 +108,8 @@
                     </Style>
 
                     <Style TargetType="DataGridCell">
-                        <Setter Property="HorizontalAlignment" Value="Center" />
+                        <Setter Property="HorizontalAlignment" Value="Stretch" />
+                        <Setter Property="HorizontalContentAlignment" Value="Center"/>
                     </Style>
 
                 </DataGrid.Resources>
@@ -119,48 +124,67 @@
                     <DataGridTextColumn
                         Header="Автор"     
                         Width="150"
-                        Binding="{Binding .Author}"/>
+                        Binding="{Binding .Author.Name}"/>
                     <DataGridTextColumn
                         Header="Жанр"       
                         Width="140"
-                        Binding="{Binding .Genre}" />
+                        Binding="{Binding .Genre.Name}" />
                     <DataGridTemplateColumn Width="30">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <Button BorderThickness="0" Background="Transparent" Height="20" Width="20" Command="{Binding DataContext.EditBookCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding .Id}">
-                                    <Image Source="C:\Users\Kamila\Desktop\logo_learn_more.png"/>
+                                    <Image Source="../logo_learn_more.png"/>
+                                </Button>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
+                    <DataGridTemplateColumn>
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <Button Background="Transparent" Height="20" Width="20" Command="{Binding DataContext.DeleteBookCommand, RelativeSource={RelativeSource AncestorType=Window}}" CommandParameter="{Binding .Id}">
+                                    <Image Source="../exit.png"/>
                                 </Button>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
-            
-            <Grid  HorizontalAlignment="Left" Height="360" Margin="504,64,0,0" VerticalAlignment="Top" Width="277" Background="#FF3E3E42">
-                <Border BorderBrush="#FF139EE0" BorderThickness="0.8" Margin="0,0,0,0">
-                    <TextBlock Name="TitleBlockHeader" Margin="10,20,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Название: " Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
-                </Border>
-                <TextBlock Name="AuthorBlockHeader" Text="Автор: " Margin="10,50,0,0" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Top"  Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="GenreBlockHeader" Text="Жанр: " Margin="10,80,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="YearBlockHeader" Text="Год: " Margin="10,110,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="PagesNumberBlockHeader" Text="Кол-во страниц: " Margin="10,130,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="MarkBlockHeader" Text="Моя оценка: " Margin="10,150,0,0" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Top"  Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="ReadingPeriodBlockHeader" Text="Период прочтения: " Margin="10,170,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="AnnotationBlockHeader" Text="Аннотация: " Margin="10,205,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="CommentBlockHeader" Text="Комментарий: " Margin="10,260,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
+            <ContentControl Content="{Binding SelectedBook}">
+                <ContentControl.ContentTemplate>
+                    <DataTemplate>
+                        <Grid HorizontalAlignment="Left" Height="360" Margin="504,64,0,0" VerticalAlignment="Top" Width="277" Background="#FF3E3E42">
+                            <Border BorderBrush="#FF139EE0" BorderThickness="0.8" Margin="0,0,0,0">
+                                <TextBlock Name="TitleBlockHeader" Margin="10,20,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" TextWrapping="Wrap" Text="Название: " Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
+                            </Border>
+                            <TextBlock Name="AuthorBlockHeader" Text="Автор: " Margin="10,50,0,0" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Top"  Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="GenreBlockHeader" Text="Жанр: " Margin="10,80,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="YearBlockHeader" Text="Год: " Margin="10,110,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="PagesNumberBlockHeader" Text="Кол-во страниц: " Margin="10,130,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="MarkBlockHeader" Text="Моя оценка: " Margin="10,150,0,0" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Top"  Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="ReadingPeriodBlockHeader" Text="Период прочтения: " Margin="10,170,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="AnnotationBlockHeader" Text="Аннотация: " Margin="10,205,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="CommentBlockHeader" Text="Комментарий: " Margin="10,260,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FF139EE0" FontFamily="Century Gothic" FontSize="14"/>
 
-                <TextBlock Name="TitleBlock" Margin="90,20,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="AuthorBlock" Margin="62,50,0,0" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Top"  Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="GenreBlock"  Margin="62,80,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="YearBlock" Margin="45,110,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="PagesNumberBlock" Margin="130,130,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="MarkBlock"  Margin="105,150,0,0" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Top"  Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="ReadingPeriodBlock" Margin="150,170,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="AnnotationBlock" Margin="95,205,3.5,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
-                <TextBlock Name="CommentBlock" Margin="125,260,3.5,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="TitleBlock" Text="{Binding .Title}" Margin="90,20,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="AuthorBlock" Text="{Binding .Author.Name}" Margin="62,50,0,0" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Top"  Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="GenreBlock" Text="{Binding .Genre.Name}" Margin="62,80,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="YearBlock" Text="{Binding .Year}" Margin="45,110,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="PagesNumberBlock" Text="{Binding .Pages}" Margin="130,130,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="MarkBlock" Text="{Binding .Mark}" Margin="105,150,0,0" HorizontalAlignment="Left" TextWrapping="Wrap"  VerticalAlignment="Top"  Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
+                            <StackPanel Orientation="Horizontal" Name="ReadingPeriodBlock" Margin="150,170,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                                <TextBlock Name="Start" Text="{Binding .StartTime}"  Margin="0" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
+                                <TextBlock Text=" - " Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
+                                <TextBlock Name="Finish" Text="{Binding .FinishTime}"  Margin="0"  Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
+                            </StackPanel>
+                            <TextBlock Name="AnnotationBlock" Text="{Binding .Annotation}" Margin="95,205,3.5,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
+                            <TextBlock Name="CommentBlock" Text="{Binding .Comment}" Margin="125,260,3.5,0" HorizontalAlignment="Left" VerticalAlignment="Top" TextWrapping="Wrap" Foreground="#FFFEFFFF" FontFamily="Century Gothic" FontSize="14"/>
 
-                <TextBlock HorizontalAlignment="Stretch" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Background="#FF139EE0" Foreground="White" Width="277" Height="17" FontFamily="Century Gothic" FontSize="14"><Run Text="Описание"/><LineBreak/><Run/></TextBlock>
-            </Grid>
+                            <TextBlock HorizontalAlignment="Stretch" TextAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Background="#FF139EE0" Foreground="White" Width="277" Height="17" FontFamily="Century Gothic" FontSize="14"><Run Text="Описание"/><LineBreak/><Run/></TextBlock>
+                        </Grid>
+                    </DataTemplate>
+                </ContentControl.ContentTemplate>
+            </ContentControl>
         </Grid>
+
     </DockPanel>
 </Window>
