--- a/BookOrganizer/Views/AddBookView.xaml
+++ b/BookOrganizer/Views/AddBookView.xaml
@@ -2,68 +2,186 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:c="clr-namespace:BookOrganizer.Commands"
-       Title="Книга" Height="392" Width="655" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+        Icon="/BookOrganizer;component/logo_bookOrg_transp.png"
+       Title="Книга" Height="470.5" Width="787" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
     <Grid Margin="0">
         <Grid.RowDefinitions>
-            <RowDefinition Height="50"></RowDefinition>
+            <RowDefinition Height="60"></RowDefinition>
+            <RowDefinition Height="180"></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="25"></RowDefinition>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" x:Name = "MyTicks" Margin="10 3 10 0" HorizontalAlignment="Stretch" VerticalAlignment="Top">
+        <Grid Grid.Row="0" Background="#FF3E3E42" x:Name = "MyTicks"  HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="60">
 
-            <TextBlock Text="Читал" TextAlignment="Left" FontSize="16" />
-            <TextBlock Text="Читаю/Сейчас начну читать" HorizontalAlignment="Center" FontSize="16"/>
-            <TextBlock Text="Буду читать" TextAlignment="Right" FontSize="16"/>
-            <Slider x:Name="StateOfBook" Margin="0 20 0 0" Minimum="0" Maximum="2" Value="{Binding SelectedMode, UpdateSourceTrigger=PropertyChanged}"  IsSnapToTickEnabled="true" VerticalAlignment="Top" HorizontalAlignment="Stretch" TickPlacement="TopLeft" Foreground="#FF281E1E"/>
+            <TextBlock Text="Прочитано" TextAlignment="Left" Margin="120,7,0,0" FontFamily="Century Gothic" FontSize="16" FontWeight="Bold" Foreground="White" />
+            <TextBlock Text="Читаю" TextAlignment="Left" HorizontalAlignment="Left" FontFamily="Century Gothic" FontSize="16" FontWeight="Bold" Foreground="White" Margin="360,7,0,0" />
+            <TextBlock Text="Вишлист" TextAlignment="Right" HorizontalAlignment="Right" FontFamily="Century Gothic" FontSize="16" FontWeight="Bold" Margin="0,7,140,27" Foreground="White"/>
+            <Slider x:Name="StateOfBook" Minimum="0" Maximum="2" 
+                        Value="{Binding SelectedMode, UpdateSourceTrigger=PropertyChanged}"  
+                        IsSnapToTickEnabled="true" 
+                        VerticalAlignment="Bottom" HorizontalAlignment="Center" 
+                        TickPlacement="TopLeft" Foreground="White" 
+                        Width="450" Height="26" Margin="100,0,99,8"/>
         </Grid>
 
-        <Grid Grid.Row="1" Margin="10">
-            <DockPanel HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5 -10 0 0 ">
-                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Автор книги" FontSize="13"/>
-                <ComboBox x:Name="AuthorBox" FontSize="16" Height="26" Width="130" SelectedItem="{Binding Author, UpdateSourceTrigger=PropertyChanged}" ItemsSource="{Binding Authors}" DisplayMemberPath="Name"/>
-            </DockPanel>
-            <DockPanel HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0 0 0 40">
-                <TextBox x:Name="TitleBox" ToolTip="Название книги" MaxWidth="600" Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" DockPanel.Dock="Top" FontSize="25" Height="40"/>
-                <Grid Height="20" DockPanel.Dock="Top"/>
-                <Button DockPanel.Dock="Top" Grid.Row="2" Command="{Binding SubmitCommand}" Content="Пошёл!" HorizontalAlignment="Center" VerticalAlignment="Top" Height="35" Width="137"/>
-            </DockPanel>
-            <DockPanel HorizontalAlignment="Right" VerticalAlignment="Top" Margin=" 0 -10 5 0">
-                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Год выпуска" FontSize="13"/>
-                <TextBox x:Name="YearBox" Text="{Binding Year, UpdateSourceTrigger=PropertyChanged}" KeyDown="OnlyDigitsOnlyFour" FontSize="16" Height="26" Width="120"/>
-            </DockPanel>
-            <DockPanel HorizontalAlignment="Left" VerticalAlignment="Bottom">
-                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Аннотация" FontSize="13"/>
-                <TextBox Text="{Binding Annotation, UpdateSourceTrigger=PropertyChanged}" TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" x:Name="AnnotationBox" FontSize="14" Height="80" Width="310"/>
-            </DockPanel>
-            <DockPanel IsEnabled="{Binding AfterRead}" HorizontalAlignment="Right" VerticalAlignment="Bottom">
-                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Комментарий" FontSize="13"/>
-                <TextBox TextWrapping="Wrap" AcceptsReturn="True" VerticalScrollBarVisibility="Visible" Text="{Binding Comment, UpdateSourceTrigger=PropertyChanged}" x:Name="CommentBox" FontSize="14" Height="80" Width="310"/>
-            </DockPanel>
-            <DockPanel IsEnabled="{Binding AfterRead}" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="150 1 0 0">
-                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Дата завершения" FontSize="13"/>
-                <DatePicker x:Name="FinishTimeBox" SelectedDateChanged="FinishTimeBox_SelectedDateChanged" Height="26" Width="120" IsTodayHighlighted="True" DisplayDateStart="01.01.1974"  DisplayDateEnd="01.01.2100" SelectedDate="{Binding FinishTime, UpdateSourceTrigger=PropertyChanged}"/>
-            </DockPanel>
-            <DockPanel  HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0 1 150 0">
-                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Дата начала" FontSize="13"/>
-                <DatePicker x:Name="StartTimeBox" Height="26" Width="120" IsTodayHighlighted="True" DisplayDateStart="01.01.1974"  DisplayDateEnd="01.01.2100" SelectedDate="{Binding StartTime, UpdateSourceTrigger=PropertyChanged}"/>
-            </DockPanel>
-            <DockPanel HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0 0 30 10">
-                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Жанр" FontSize="13"/>
-                <ComboBox x:Name="GenreBox" FontSize="16" Height="26" Width="120" SelectedItem="{Binding Genre, UpdateSourceTrigger=PropertyChanged}" ItemsSource="{Binding Genres}" DisplayMemberPath="Name"/>
-            </DockPanel>
+        <!--<DataGrid HorizontalAlignment="Left" Margin="0,2,0,0" Grid.Row="1" VerticalAlignment="Top" Height="198" Width="450">
+            <DataGrid.Resources>
+                <Style TargetType="{x:Type DataGridColumnHeader}">
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                </Style>
 
-            <DockPanel HorizontalAlignment="Left" VerticalAlignment="Center" Margin="30 0 0 10">
-                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Cтраниц" FontSize="13"/>
-                <TextBox x:Name="PagesBox" FontSize="16" Height="26" KeyDown="PagesBox_KeyDown" Text="{Binding Pages, UpdateSourceTrigger=PropertyChanged}" Width="60"/>
-            </DockPanel>
-            <DockPanel IsEnabled="{Binding  AfterRead}" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="110 0 0 10">
-                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Моя оценка" FontSize="13"/>
-                <ComboBox x:Name="MarkBox" SelectedItem="{Binding Mark, UpdateSourceTrigger=PropertyChanged}" ItemsSource="{Binding AvailableMarks}" FontSize="16" Height="26" Width="60"/>
-            </DockPanel>
+                <Style TargetType="DataGridCell">
+                    <Setter Property="HorizontalAlignment" Value="Stretch" />
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                </Style>
+            </DataGrid.Resources>
+            
+            
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="f" Width="150"/>
+                <DataGridTextColumn Header="h" Width="150"/>
+            </DataGrid.Columns>
+               
+            
 
 
+
+        </DataGrid>-->
+
+        <Grid Grid.Row="1" Margin="0,0,0,0.5">
+            <DockPanel Margin="30,30,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <TextBlock Text="Название" Margin="15,15,0,0" FontFamily="Century Gothic" FontSize="14" FontWeight="Bold" />
+                <TextBox x:Name="TitleBox" Margin="10,15,0,0" ToolTip="Название книги" Foreground="#FF3E3E42" BorderBrush="Transparent" MaxWidth="600" 
+                         Text="{Binding Title, UpdateSourceTrigger=PropertyChanged}" DockPanel.Dock="Top" 
+                         FontFamily="Century Gothic" FontSize="14" Height="23" MinWidth="200"/>
+                <Grid Background="#FF139EE0" Width="200" HorizontalAlignment="Right" Height="1" DockPanel.Dock="Top"/>
+            </DockPanel>
+
+            <DockPanel HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,80,0,0">
+                <TextBlock Text="Автор" Margin="20,15" FontFamily="Century Gothic" FontSize="14" FontWeight="Bold"/>
+                <ComboBox x:Name="AuthorBox" Margin="8,1,0,0" MaxWidth="600" MinWidth="200"
+                          FontFamily="Century Gothic" FontSize="14" Height="23"
+                          Foreground="#FF3E3E42"
+                          SelectedItem="{Binding Author, UpdateSourceTrigger=PropertyChanged}"
+                          ItemsSource="{Binding Authors}" DisplayMemberPath="Name"/>
+            </DockPanel>
+
+            <DockPanel HorizontalAlignment="Left" VerticalAlignment="Top" Margin="30,130,0,0">
+                <TextBlock Text="Жанр" Margin="20,15" FontFamily="Century Gothic" FontSize="14" FontWeight="Bold"/>
+                <ComboBox x:Name="GenreBox" Margin="11,1,0,0" MaxWidth="600" MinWidth="200"
+                          FontFamily="Century Gothic" FontSize="14" Height="23" 
+                          Foreground="#FF3E3E42"
+                          SelectedItem="{Binding Genre, UpdateSourceTrigger=PropertyChanged}" 
+                          ItemsSource="{Binding Genres}" DisplayMemberPath="Name"/>
+            </DockPanel>
+
+
+            <DockPanel Margin="390,30,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <TextBlock Text="Год выпуска" Margin="25,15,0,0" FontFamily="Century Gothic" FontSize="14" FontWeight="Bold" />
+                <TextBox x:Name="YearBox" Margin="23,15,0,0" ToolTip="Год выпуска"
+                         Foreground="#FF3E3E42" BorderBrush="Transparent" MaxWidth="150" 
+                         Text="{Binding Year, UpdateSourceTrigger=PropertyChanged}" KeyDown="OnlyDigitsOnlyFour"
+                         DockPanel.Dock="Top" 
+                         FontFamily="Century Gothic" FontSize="14" Height="23" MinWidth="70"/>
+                <Grid Background="#FF139EE0" Width="70" HorizontalAlignment="Right" Height="1" DockPanel.Dock="Top"/>
+            </DockPanel>
+
+            <DockPanel Margin="390,80,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <TextBlock Text="Кол-во страниц" Margin="15,15,0,0" FontFamily="Century Gothic" FontSize="14" FontWeight="Bold" />
+                <TextBox x:Name="PagesBox" Margin="10,15,0,0" ToolTip="Кол-во страниц"
+                         Foreground="#FF3E3E42" BorderBrush="Transparent" MaxWidth="150" 
+                         KeyDown="PagesBox_KeyDown" Text="{Binding Pages, UpdateSourceTrigger=PropertyChanged}" 
+                         DockPanel.Dock="Top" 
+                         FontFamily="Century Gothic" FontSize="14" Height="23" MinWidth="70"/>
+                <Grid Background="#FF139EE0" Width="70" HorizontalAlignment="Right" Height="1" DockPanel.Dock="Top"/>
+            </DockPanel>
+
+            <DockPanel IsEnabled="{Binding  AfterRead}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="390,130,0,0">
+                <TextBlock Text="Моя оценка" Margin="28,15" FontFamily="Century Gothic" FontSize="14" FontWeight="Bold"/>
+                <ComboBox x:Name="MarkBox" Margin="-4,1,0,0" MaxWidth="600" MinWidth="70"
+                          FontFamily="Century Gothic" FontSize="14" Height="23" 
+                          Foreground="#FF3E3E42"
+                          SelectedItem="{Binding Mark, UpdateSourceTrigger=PropertyChanged}" 
+                          ItemsSource="{Binding AvailableMarks}"/>
+            </DockPanel>
+
+            <DockPanel  HorizontalAlignment="Left" VerticalAlignment="Top" Margin="630,30,0,0">
+                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Дата начала" 
+                           Margin="15,15,15,3"
+                           FontFamily="Century Gothic" FontSize="14" FontWeight="Bold"
+                           />
+                <DatePicker x:Name="StartTimeBox" 
+                            FontFamily="Century Gothic" FontSize="14" Height="25" 
+                            Foreground="#FF3E3E42"
+                            IsTodayHighlighted="True" DisplayDateStart="01.01.1974"  
+                            DisplayDateEnd="01.01.2100" 
+                            SelectedDate="{Binding StartTime, UpdateSourceTrigger=PropertyChanged}"/>
+            </DockPanel>
+
+            <DockPanel IsEnabled="{Binding AfterRead}" HorizontalAlignment="Left" 
+                       VerticalAlignment="Top" Margin="620,105,0,0">
+                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Дата окончания" 
+                           Margin="15,15,15,3"
+                           FontFamily="Century Gothic" FontSize="14" FontWeight="Bold"
+                           />
+                <DatePicker x:Name="FinishTimeBox" 
+                            FontFamily="Century Gothic" Width="125"
+                            FontSize="14" Height="25" 
+                            Foreground="#FF3E3E42"
+                            IsTodayHighlighted="True" DisplayDateStart="01.01.1974"  
+                            DisplayDateEnd="01.01.2100" 
+                            SelectedDateChanged="FinishTimeBox_SelectedDateChanged"
+                            SelectedDate="{Binding FinishTime, UpdateSourceTrigger=PropertyChanged}"/>
+            </DockPanel>
+
+            </Grid>
+
+        <Grid Grid.Row="2">
+            <DockPanel Margin="30,15,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Аннотация" 
+                           FontFamily="Century Gothic" FontSize="14" FontWeight="Bold"/>
+                <TextBox x:Name="AnnotationBox" 
+                         Margin="15"
+                         Text="{Binding Annotation, UpdateSourceTrigger=PropertyChanged}" 
+                         TextWrapping="Wrap" AcceptsReturn="True" 
+                         VerticalScrollBarVisibility="Visible" 
+                         ToolTip="Аннотация"
+                         Foreground="#FF3E3E42" 
+                         FontFamily="Century Gothic"
+                         Height="100" Width="275"/>
+            </DockPanel>
+
+            <DockPanel IsEnabled="{Binding AfterRead}" 
+                       Margin="350,15,0,0"
+                       HorizontalAlignment="Left" VerticalAlignment="Top">
+                <TextBlock HorizontalAlignment="Center" DockPanel.Dock="Top" Text="Комментарий" 
+                       FontFamily="Century Gothic" FontSize="14" FontWeight="Bold"/>
+                <TextBox x:Name="CommentBox"
+                         Margin="15"
+                         TextWrapping="Wrap" AcceptsReturn="True" 
+                         VerticalScrollBarVisibility="Visible" 
+                         Text="{Binding Comment, UpdateSourceTrigger=PropertyChanged}" 
+                         ToolTip="Комментарий"
+                         Foreground="#FF3E3E42" 
+                         FontFamily="Century Gothic"
+                         Height="100" Width="275"/>
+            </DockPanel>
+
+            <Button Command="{Binding SubmitCommand}" 
+                    HorizontalAlignment="Right" VerticalAlignment="Center" 
+                    Cursor="Hand"
+                    Margin="0,0,40,0"
+                    Background="Transparent"
+                    BorderBrush="Transparent"
+                    Height="70" Width="70">
+                <Image Source="../logo_save.png"/>
+            </Button>
+            
         </Grid>
-
+        
+        <Grid Grid.Row="3" Background="#FF3E3E42"/>
     </Grid>
 </Window>
 
