--- a/BookOrganizer/Views/MainView.xaml
+++ b/BookOrganizer/Views/MainView.xaml
@@ -4,6 +4,7 @@
     xmlns:c="clr-namespace:BookOrganizer.Commands" 
     xmlns:s ="clr-namespace:BookOrganizer.ViewModels"
         Title="Book Organizer" 
+        Icon="/BookOrganizer;component/logo_bookOrg_transp.png"
         Background="#FFEBEBEB" BorderBrush="#FF0796A2"
         Height="470.5" Width="787" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
 
@@ -69,7 +70,6 @@
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
-
                 <Button Command="{Binding OpenListCommand}" CommandParameter="2" x:Name="WishList" HorizontalAlignment="Left" VerticalAlignment="Top" Height="13" Width="13" Margin="388,25,0,0" BorderBrush="#FF139EE0" Foreground="#FF139EE0" Cursor="Hand">
                     <Button.Template>
                         <ControlTemplate TargetType="{x:Type Button}">
@@ -123,16 +123,14 @@
                     <DataGridTextColumn
                         Header="Название" 
                         Width="160"
-                        Binding="{Binding .Title}">
-
-                    </DataGridTextColumn>
+                        Binding="{Binding .Title}"/>
                     <DataGridTextColumn
                         Header="Автор"     
-                        Width="160"
+                        Width="150"
                         Binding="{Binding .Author.Name}"/>
                     <DataGridTextColumn
                         Header="Жанр"       
-                        Width="150"
+                        Width="140"
                         Binding="{Binding .Genre.Name}" />
                     <DataGridTemplateColumn Width="50">
                         <DataGridTemplateColumn.CellTemplate>
@@ -142,11 +140,10 @@
                                 </Button>
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
-                    </DataGridTemplateColumn>
-                   
+                    </DataGridTemplateColumn>               
                 </DataGrid.Columns>
             </DataGrid>
-            <ContentControl Content="{Binding SelectedBook}">
+            <ContentControl Content="{Binding SelectedBook}" Margin="0,0,0,0">
                 <ContentControl.ContentTemplate>
                     <DataTemplate>
                         <Grid HorizontalAlignment="Left" Height="360" Margin="504,64,0,0" VerticalAlignment="Top" Width="277" Background="#FF3E3E42">
